<resources>
    <string name="app_name">Valet</string>
    <string name="app_name_free">Valet Free</string>
    <string name="app_name_caps">VALET</string>
    <string name="period">.</string>
    <string name="not_supported">Your device does not support Google Play Services. Email support@valetapp.co for a refund.</string>
    <string name="rate">Rate Valet on Google Play?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="never">Never</string>
    <string name="yards">yards</string>
    <string name="accuracy">accuracy:</string>
    <string name="meters">meters</string>
    <string name="select_alarm">Alarm</string>
    <string name="select_ringtone">Select Ringtone</string>
    <string name="clock">24 Hour Clock</string>
    <string name="metric_units">Metric Units</string>
    <string name="standard_units">Standard Units</string>
    <string name="accuracy_f">accuracy: %1$d %2$s</string>
    <string name="bar_item_translate">Translate</string>
    <string name="hour_abbreviation">h</string>
    <string name="mintute_abbreviation">m</string>
    <string name="second_abbreviation">s</string>
    <string name="auto_info">Turn the Parking Sensor on to automate the park feature. This uses slightly more battery and is not 100 percent accurate.\n\nAlternatively you may link to a paired Bluetooth device to utilize connectivity to auto park and save battery life.\n\nYou can also use a car dock.  Desk docks will not work.</string>
    <string name="select_bluetooth">Bluetooth</string>
    <string name="parking_sensor">Parking Sensor</string>
    <string name="notification_title">Valet Auto Park</string>
    <string name="notification_text">Set a timer or Alarm</string>
    <string name="notification_alarm_title">Valet Alarm</string>
    <string name="notification_alarm_text">You should move your car now!</string>
    <string name="dock">Car dock</string>
    <string name="notifications">Notifications</string>
    <string name="info">Information</string>
    <string name="delete">Delete</string>
    <string name="view">View</string>
    <string name="park_bar_item">Park My Car</string>
    <string name="reset_bar_item_cd">Unpark my car.</string>
    <string name="find_bar_item_cd">Find my car.</string>
    <string name="alarm_bar_item_cd">Set an alarm.</string>
    <string name="timer_bar_item_cd">Set a timer.</string>
    <string name="share_bar_item_cd">Share something about Valet.</string>
    <string name="auto_bar_item_cd">Autopark with Bluetooth, Parking Sensor, or a Car Dock</string>
    <string name="schedule_bar_item_cd">Schedule a parking reminder.</string>
    <string name="set_bar_item">Set</string>
    <string name="timer_bar_item">Timer</string>
    <string name="alarm_bar_item">Alarm</string>
    <string name="unpark_bar_item">Unpark My Car</string>
    <string name="unschedule_bar_item">Reset</string>
    <string name="locating_bar_item">Locating…</string>
    <string name="bar_item_help">Help</string>
    <string name="settings_bar_item_cd">Settings</string>
    <string name="hint_address">Address</string>
    <string name="hint_distance">Distance</string>
    <string name="locate_bar_item_cd">Automatically locate your car</string>
    <string name="normal_radio_button">Normal</string>
    <string name="satellite_radio_button">Satellite</string>
    <string name="parked">Parked!</string>
    <string name="no_address">No address found</string>
    <string name="note">Add note</string>
    <string name="distance_units">mi</string>
    <string name="timer_button">Set Timer</string>
    <string name="share_extra_text_parking">I find my car using Valet and you should too. http://www.valetapp.co</string>
    <string name="share_extra_html_text_parking">I find my car using <a href="http://www.valetapp.co">Valet</a> and you should too.</string>
    <string name="share_extra_text_parked">My car is here:</string>
    <string name="share_extra_html_text_parked">My car is</string>
    <string name="share_extra_html_text_parked_anchor">here</string>
    <string name="share_intent_chooser_title">Share</string>
    <string name="find_intent_chooser_title">Find</string>
    <string name="vehicle_marker_title">Your Car</string>
    <string name="mile_abbreviation">mi</string>
    <string name="kilometer_abbreviation">km</string>
    <string name="pm">PM</string>
    <string name="am">AM</string>
    <string name="at">at</string>
    <string name="monday">Monday</string>
    <string name="tuesday">Tuesday</string>
    <string name="wednesday">Wednesday</string>
    <string name="thursday">Thursday</string>
    <string name="friday">Friday</string>
    <string name="saturday">Saturday</string>
    <string name="sunday">Sunday</string>
    <string name="location_dialog_message">Turn on your GPS?</string>
    <string name="location_dialog_positive_button">Yes</string>
    <string name="location_dialog_negative_button">No</string>
    <string name="no_location_message">Valet requires GPS to park your car.</string>
    <string name="reset_dialog_message">Reset your car\'s location?</string>
    <string name="reset_dialog_positive_button">Yes</string>
    <string name="reset_dialog_no_button">No</string>
    <string name="camera_button_cd">Take a picture</string>
    <string name="separator">:</string>
    <string name="hours">hours</string>
    <string name="permission_fail">Valet requires location permission to figure out where you car is parked.</string>
    <string name="warn_locating">Acquiring location the first time after granting permission might take a few seconds.</string>
</resources>