<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:babel="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout

        android:padding="8dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical">


        <LinearLayout
            android:id="@+id/bluetoothRelativeLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.babelsdk.main.view.BabelCheckBox
                android:id="@+id/bluetoothCheckBox"
                android:text="@string/select_bluetooth"
                babel:text="select_bluetooth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <Spinner
                android:id="@+id/bluetoothSpinner"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:layout_width="0dp"
                android:layout_height="wrap_content" />

            <ImageButton
                android:id="@+id/bluetoothButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="onBluetoothItem"
                android:padding="8dp"
                android:src="@drawable/bluetooth_selector"
                android:contentDescription="@string/select_bluetooth"
                android:background="@drawable/default_selector" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.babelsdk.main.view.BabelCheckBox
                android:id="@+id/dockCheckBox"
                android:layout_width="wrap_content"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:textSize="14sp"
                android:textColor="@color/default_text"
                android:layout_height="wrap_content"
                android:text="@string/dock"
                babel:text="dock"/>

            <com.babelsdk.main.view.BabelCheckBox
                android:id="@+id/sensorCheckBox"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/default_text"
                android:layout_height="wrap_content"
                android:text="@string/parking_sensor"
                babel:text="parking_sensor"/>

        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="0dp"
            android:layout_weight="1">
            <View
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_text" />
        </FrameLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:gravity="center_vertical"
            android:layout_marginTop="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.babelsdk.main.view.BabelCheckBox
                android:id="@+id/alarmCheckBox"
                android:text="@string/alarm_bar_item"
                babel:text="alarm_bar_item"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/default_text"
                android:layout_marginRight="8dp"
                android:layout_marginEnd="8dp"
                android:singleLine="true"
                android:textSize="14sp" />

            <com.babelsdk.main.view.BabelCheckBox
                android:id="@+id/clockCheckBox"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/default_text"
                android:layout_height="wrap_content"
                android:text="@string/clock"
                babel:text="clock"/>

            <ImageButton
                android:id="@+id/alarmButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="selectRingtone"
                android:padding="8dp"
                android:layout_marginLeft="8dp"
                android:src="@drawable/alarm_selector"
                android:contentDescription="@string/select_ringtone"
                android:background="@drawable/default_selector" />
        </LinearLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.babelsdk.main.view.BabelCheckBox
                android:id="@+id/notificationsCheckBox"
                android:layout_width="wrap_content"
                android:textSize="14sp"
                android:textColor="@color/default_text"
                android:layout_height="wrap_content"
                android:text="@string/notifications"
                babel:text="notifications"/>

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_marginTop="16dp"
            android:layout_height="0dp"
            android:layout_weight="1">
            <View
                android:layout_gravity="center"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/default_text" />
        </FrameLayout>

        <RadioGroup
            android:id="@+id/unitsRadioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical"
            android:orientation="horizontal">

            <com.babelsdk.main.view.BabelRadioButton
                android:id="@+id/standardRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/standard_units"
                babel:text="standard_units"
                android:textColor="@color/default_text"
                android:textSize="14sp" />

            <com.babelsdk.main.view.BabelRadioButton
                android:id="@+id/metricRadioButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/metric_units"
                babel:text="metric_units"
                android:textColor="@color/default_text"
                android:textSize="14sp" />
        </RadioGroup>
    </LinearLayout>
</ScrollView>
