<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res/co.valetapp"
    android:layout_width="match_parent"
    android:gravity="center"
    android:id="@+id/countdown_linear_layout"
    android:layout_height="match_parent" >

    <co.valetapp.view.FontableTextView
        android:id="@+id/hours_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:minEms="2"
        android:singleLine="true"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        app:font="Gotham-Bold.ttf" />
    
    <co.valetapp.view.FontableTextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/hour_abbreviation"
        android:textSize="24sp"
        app:font="Gotham-Bold.ttf" />
    
    <co.valetapp.view.FontableTextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/separator"
        android:textSize="24sp"
        app:font="Gotham-Bold.ttf" />
    
    <co.valetapp.view.FontableTextView
        android:id="@+id/minutes_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:minEms="2"
        android:textSize="24sp"
        android:gravity="center_horizontal"
        app:font="Gotham-Bold.ttf" />
    
    <co.valetapp.view.FontableTextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/mintute_abbreviation"
        android:textSize="24sp"
        app:font="Gotham-Bold.ttf" />
    
    <co.valetapp.view.FontableTextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:gravity="center"
        android:layout_height="wrap_content"
        android:text="@string/separator"
        android:textSize="24sp"
        app:font="Gotham-Bold.ttf" />
    
    <co.valetapp.view.FontableTextView
        android:id="@+id/seconds_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:singleLine="true"
        android:minEms="2"
        android:gravity="center_horizontal"
        android:textSize="24sp"
        app:font="Gotham-Bold.ttf" />
    
    <co.valetapp.view.FontableTextView
        android:layout_width="0dp"
        android:layout_weight="1"
        android:layout_height="wrap_content"
        android:text="@string/second_abbreviation"
        android:textSize="24sp"
        app:font="Gotham-Bold.ttf" />

</LinearLayout>